# RepoRAG

./: Dockerfile  README.md  config.yaml  pyproject.toml
gitrag/: __init__.py  cli.py  config.py
gitrag/api/: __init__.py  server.py
gitrag/chunking/: __init__.py  ast_chunker.py  base.py  text_chunker.py
gitrag/core/: __init__.py  pipeline.py  types.py
gitrag/embeddings/: __init__.py  base.py  local.py
gitrag/evaluation/: metrics.py
gitrag/generation/: __init__.py  context.py  llm.py  prompts.py
gitrag/index/: __init__.py  bm25_store.py  graph_store.py  vector_store.py
gitrag/ingest/: __init__.py  filters.py  language.py  loader.py
gitrag/memory/: __init__.py  conversation.py
gitrag/query/: __init__.py  intent.py  multi_hop.py  reformulator.py
gitrag/retrieval/: __init__.py  fusion.py  hybrid.py  reranker.py
